--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,3 +1,7 @@
+- date: 25- Jun 2025
+  headline: "One paper has been accepted for the presentation at the 2025 International Conference on Computer Vision (ICCV), Oct 19-25, Honolulu, Hawaii"
+
+
 - date: 16- Jun 2025
   headline: "Four papers have been accepted for the presentation at the 2025 IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS), Oct 19-25, Hangzhou, China"
 
