--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,3 +1,6 @@
+- date: 06- Sep 2025
+  headline: "Fifth Master Trainer Program (MTP) for Technology Specific Work Theme "Allied UAS Technologies" with focus on Computer Vision and Motion Planning for UAV's
+
 - date: 16- Jun 2025
   headline: "Four papers have been accepted for the presentation at the 2025 IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS), Oct 19-25, Hangzhou, China"
 
