--- a/_data/pubs/2025.yml
+++ b/_data/pubs/2025.yml
@@ -1,3 +1,12 @@
+- title: "An Integrated Approach to Aerial Grasping:Combining a Bistable Gripper With Adaptive Control"
+  authors: Rishabh Dev Yadav, Brycen Jones, Saksham Gupta, Amitabh Sharma, Jiefeng Sun, Jianguo Zhao and Spandan Roy
+  venue: IEEE/ASME TRANSACTIONS ON MECHATRONICS 
+  link: # https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=11098573
+    url: /publications/2025/Rishabh_An
+    display: Project Page
+  id: mkrishna
+  featured: 1
+
 - title: "SparseLoc: Sparse Open-Set Landmark-based Global Localization for Autonomous Navigation"
   authors: Pranjal Paul, Vineeth Bhat, Tejas Salian, Mohammad Omama, Krishna Murthy Jatavallabhula, Naveen Arulselvan, Madhava Krishna
   venue: IEEE/RSJ International Conference on Intelligent Robots and Systems 2025 (IROS)
