--- a/_data/pubs/2025.yml
+++ b/_data/pubs/2025.yml
@@ -1,6 +1,6 @@
 - title: "Anticipate, Adapt, Act: A Hybrid Framework for Task Planning"
   authors: Nabanita Dash, Ayush Kaura, Shivam Singh, Ramandeep Singh, Snehasis Banerjee,  Mohan Sridharan,  Madhava Krishna
-  venue: ECMR2025: 12th European Conference on Mobile Robots (ECMR 2025), Padova, Italy, September 2-5, 2025
+  venue: 12th European Conference on Mobile Robots (ECMR 2025), Padova, Italy, September 2-5, 2025
   link: #
     url: /publications/2025/Nabanita_ECMR
     display: Project Page
