--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,5 +1,8 @@
+- date: 19- Sep 2025
+  headline: "One paper has been accepted as ✨Spotlight at the 2025 Annual Conference on Neural Information Processing Systems (NeurIPS), Dec 2-7, San Diego, California"
+
 - date: 06- Sep 2025
-  headline: "Fifth Master Trainer Program (MTP) for Technology Specific Work Theme "Allied UAS Technologies" with focus on Computer Vision and Motion Planning for UAV's
+  headline: "Fifth Master Trainer Program (MTP) for Technology Specific Work Theme “Allied UAS Technologies“ with focus on Computer Vision and Motion Planning for UAV's"
 
 - date: 25- Jun 2025
   headline: "One paper has been accepted for the presentation at the 2025 International Conference on Computer Vision (ICCV), Oct 19-25, Honolulu, Hawaii"
