--- a/_data/pubs/2025.yml
+++ b/_data/pubs/2025.yml
@@ -1,3 +1,12 @@
+- title: "SegMASt3R: Geometry Grounded Segment Matching"
+  authors: Rohit Jayanti, Swayam Agrawal, Vansh Garg, Siddharth Tourani, Muhammad Haris Khan, Sourav Garg, K Madhava Krishna
+  venue: Advances in Neural Information Processing Systems 38 (NeurIPS 2025), San Diego, 2nd-7th December, 2025
+  link: #https://segmast3r.github.io/
+    url: /publications/2025/Rohit_SegMast3R
+    display: Project Page
+  id: mkrishna
+  featured: 1
+
 - title: "Active Disturbance Rejection based approach for Fault Tolerant Control of a Quadcopter"
   authors: Prachetas P, Dinesh Viswas, Harikumar Kandath, Pooja Agrawal
   venue: 2025 International Conference on Emerging Technology in Autonomous Aerial Vehicles (ETAAV)
