--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,3 +1,6 @@
+- date: 31- Jan 2025
+  headline: "Four papers has been accepted for the presentation at the 2026 IEEE International Conference on Robotics and Automation (ICRA), June 1-5, Vienna, Austria"
+
 - date: 19- Sep 2025
   headline: "One paper has been accepted as ✨Spotlight at the 2025 Annual Conference on Neural Information Processing Systems (NeurIPS), Dec 2-7, San Diego, California"
 
@@ -29,7 +32,7 @@
   headline: "Second Two-Day workshop on Systems and Intelligence for UAV will be held on 18th & 19th Dec."
 
 - date: 19- Jul 2024
-  headline: "6 papers are accepted for presentation at the 2024 IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS) which will be held in October 14-18, 2024 at ADNEC in Abu Dhabi ,UAE"
+  headline: "6 papers are accepted for presentation at the 2024 IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS) which will be held in October 14-18, 2024 at ADNEC in Abu Dhabi, UAE"
 
 - date: 09- Mar 2024
   headline: "Master Trainer Program (MTP) for Technology Specific Work Theme “Allied UAS Technologies” -11th - 15th March 2024 at IIITH Campus"
