Fix venue formatting in 2019.yml

--- a/_data/pubs/2019.yml
+++ b/_data/pubs/2019.yml
@@ -9,7 +9,7 @@
 
 - title: "On Reduced-Complexity Robust Adaptive Control of Switched Euler-Lagrange Systems"
   authors: S. Roy and S. Baldi
-  venue: Nonlinear Analysis: Hybrid Systems
+  venue: Nonlinear Analysis, Hybrid Systems
   link:
     url: #
     display: Project Page
